--- a/flex布局/flex语法概念.html
+++ b/flex布局/flex语法概念.html
@@ -212,7 +212,7 @@
             align-content:center;
             height:800px;
         }
-        .box-22{
+        .box-22,.box-23,.box-24,.box-25,.box-26{
             flex-flow:row nowrap;
             justify-content: center;
             align-items:center;
@@ -222,12 +222,44 @@
         .box-22 .box-item:last-child{
             order:-1;
         }
+        .box-23 .box-item:nth-child(1){
+            flex-grow: 1;
+        }
+        .box-23 .box-item:nth-child(2){
+            flex-grow: 2;
+        }
+        .box-23 .box-item:nth-child(3){
+            flex-grow: 3;
+        }
+        .box-24 .box-item:nth-child(1){
+            flex-shrink:0;
+        }
+        .box-24 .box-item:nth-child(2){
+            flex-shrink:2;
+        }
+        .box-24 .box-item:nth-child(3){
+            width:800px;
+        }
+        .box-25 .box-item:nth-child(1){
+            flex-basis: auto;
+        }
+        .box-25 .box-item:nth-child(2){
+            flex-basis:200px;
+        }
+        .box-25 .box-item:nth-child(3){
+            width:300px;
+        }
+
+        .box-26 .box-item:nth-child(3){
+            align-self:flex-end;
+        }
     </style>
 </head>
 <body>
 <h1>Flex布局语法概念</h1>
 <p>
-    参考阮一峰老师教程：http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html?utm_source=tuicool
+    参考阮一峰老师教程：http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html?utm_source=tuicool<br/>
+    本文访问地址：https://chentong106140.github.io/ES6/flex%E5%B8%83%E5%B1%80/flex%E8%AF%AD%E6%B3%95%E6%A6%82%E5%BF%B5.html
 </p>
 <h2>父级容器的属性</h2>
 <h3>1、flex-direction属性</h3>
@@ -679,10 +711,11 @@
     <div class="box-item"><span>2</span></div>
     <div class="box-item"><span>3</span></div>
 </div>
-<h3>1、flex-grow属性</h3>
+<h3>2、flex-grow（放大）属性</h3>
 <p>flex-grow属性定义项目的放大比例，默认为0，即如果存在剩余空间，也不放大。</p>
+<p>如果所有项目的flex-grow属性都为1，则它们将等分剩余空间（如果有的话）。如果一个项目的flex-grow属性为2，其他项目都为1，则前者占据的剩余空间将比其他项多一倍。</p>
 <pre>
-    .box-22{
+    .box-23{
             display: flex;
             flex-flow:row nowrap;/*从左往右排列，不换行*/
             justify-content: center;/*水平居中*/
@@ -690,14 +723,121 @@
             align-content:center;/*内容多行的时候，居中*/
             height:400px;
         }
-    .box-22 .box-item:last-child{
-            order:-1;
+    .box-23 .box-item:nth-child(1){
+            flex-grow: 1;
         }
-    通过如下效果可以看出，子元素，从左往右排列，并且不换行
-    我们将子元素最后一个div的order属性设置的值为-1，由于order属性默认值为0，所以它的值最小。
-    由于值最小，所以最后一个div排列到最前面
+    .box-23 .box-item:nth-child(2){
+            flex-grow: 2;
+        }
+    .box-23 .box-item:nth-child(3){
+            flex-grow: 3;
+        }
+    通过如下效果可以看出，子元素flex-grow值是用来放大的，所谓放大就是放大元素的宽度占比。
 </pre>
-<div class="box box-22">
+<div class="box box-23">
+    <div class="box-item"><span>1</span></div>
+    <div class="box-item"><span>2</span></div>
+    <div class="box-item"><span>3</span></div>
+</div>
+
+<h3>3、flex-shrink（缩小）属性</h3>
+<p>flex-shrink属性定义了项目的缩小比例，默认为1，即如果空间不足，该项目将缩小。</p>
+<p>如果所有项目的flex-shrink属性都为1，当空间不足时，都将等比例缩小。如果一个项目的flex-shrink属性为0，其他项目都为1，则空间不足时，前者不缩小。
+    负值对该属性无效。
+</p>
+<pre>
+    .box-24{
+            display: flex;
+            flex-flow:row nowrap;/*从左往右排列，不换行*/
+            justify-content: center;/*水平居中*/
+            align-items:center;/*垂直居中*/
+            align-content:center;/*内容多行的时候，居中*/
+            height:400px;
+        }
+        .box-24 .box-item:nth-child(1){
+            flex-shrink:0;  /*值为0，目的是在父容器宽度不足的时候，它的宽度不缩小，不变动*/
+        }
+        .box-24 .box-item:nth-child(2){
+            flex-shrink:1;/*默认值就是1，目的是父容器宽度不足的时候，它的宽度进行缩小*/
+        }
+        .box-24 .box-item:nth-child(3){
+            width:800px;    /*目的是把父容器整个撑开，形成，子元素将父容器的宽度占满，并导致宽度不足，让第2个子元素进行缩小*/
+        }
+    通过如下效果可以看出，子元素flex-shrink的值是控制子元素在父容器宽度不足的时候，子元素的宽度是否需要变小
+    flex-shrink设置为0，就固定不变，flex-shrink设置为1，允许缩小
+</pre>
+<div class="box box-24">
+    <div class="box-item"><span>1</span></div>
+    <div class="box-item"><span>2</span></div>
+    <div class="box-item"><span>3</span></div>
+</div>
+<h3>4、flex-basis（固定）属性</h3>
+<p>flex-basis属性定义了在分配多余空间之前，项目占据的主轴空间（main size）。浏览器根据这个属性，计算主轴是否有多余空间。它的默认值为auto，即项目的本来大小。</p>
+<p>它可以设为跟width或height属性一样的值（比如350px），则项目将占据固定空间。</p>
+<pre>
+    .box-25{
+            display: flex;
+            flex-flow:row nowrap;/*从左往右排列，不换行*/
+            justify-content: center;/*水平居中*/
+            align-items:center;/*垂直居中*/
+            align-content:center;/*内容多行的时候，居中*/
+            height:400px;
+        }
+        .box-25 .box-item:nth-child(1){
+            flex-basis: auto;
+        }
+        .box-25 .box-item:nth-child(2){
+            flex-basis:200px;
+        }
+        .box-25 .box-item:nth-child(3){
+            width:300px;
+        }
+    通过如下效果可以看出，子元素flex-basis属性是设置固定宽度的，我们特意使用多个子元素将父级容器的宽度占满，
+    最终发现，设置了flex-basis属性的子元素，宽度是根据设置的值固定起来了，并没有被flex进行自适应，
+    而其他子元素的宽度都自适应了，只有第3个子元素宽度保持不变
+</pre>
+<div class="box box-25">
+    <div class="box-item"><span>1</span></div>
+    <div class="box-item"><span>2</span></div>
+    <div class="box-item"><span>3</span></div>
+    <div class="box-item"><span>4</span></div>
+    <div class="box-item"><span>5</span></div>
+    <div class="box-item"><span>6</span></div>
+    <div class="box-item"><span>7</span></div>
+    <div class="box-item"><span>8</span></div>
+</div>
+
+<h3>5、flex属性</h3>
+<p>flex属性是flex-grow, flex-shrink 和 flex-basis的简写，默认值为0 1 auto。后两个属性可选。</p>
+<p>该属性有两个快捷值：auto (1 1 auto) 和 none (0 0 auto)。<br/>
+    建议优先使用这个属性，而不是单独写三个分离的属性，因为浏览器会推算相关值。</p>
+
+<h3>2、align-self (单独y轴排列)属性</h3>
+<p>align-self属性允许单个项目有与其他项目不一样的对齐方式，可覆盖align-items属性。默认值为auto，表示继承父元素的align-items属性，如果没有父元素，则等同于stretch。</p>
+<pre>
+    auto(默认值)
+    flex-start             交叉轴的起点对齐
+    flex-end               交叉轴的终点对齐
+    center                 交叉轴的中点对齐
+    baseline               项目的第一行文字的基线对齐
+    stretch         如果子元素未设置高度或设为auto，将占满整个容器的高度。
+</pre>
+<pre>
+    .box-26{
+            display: flex;
+            flex-flow:row nowrap;/*从左往右排列，不换行*/
+            justify-content: center;/*水平居中*/
+            align-items:center;/*垂直居中*/
+            align-content:center;/*内容多行的时候，居中*/
+            height:400px;
+        }
+    .box-26 .box-item:nth-child(3){
+            align-self:flex-end;/*让最后一个子元素，y轴位置未终点排列*/
+        }
+    通过如下效果可以看出，子元素align-self值，可以覆盖父容器的align-items属性的排列方式，
+    我们是指最后一个子元素的align-self为flex-end,让他单独以y轴的终点排列
+</pre>
+<div class="box box-26">
     <div class="box-item"><span>1</span></div>
     <div class="box-item"><span>2</span></div>
     <div class="box-item"><span>3</span></div>
