--- a/less/less教程.html
+++ b/less/less教程.html
@@ -2,6 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,user-scalable=no,minimal-ui">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="black" name="apple-mobile-web-app-status-bar-style">
+    <meta content="telephone=no" name="format-detection">
+    <meta content="email=no" name="format-detection">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="format-detection" content="telephone=no">
+    <meta http-equiv="Expires" content="-1">
+    <meta http-equiv="Cache-Control" content="no-cache">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta name="full-screen" content="yes">
+    <meta name="x5-fullscreen" content="true">
+    <meta name="x5-page-mode" content="app">
+    <meta name="browsermode" content="application">
+    <meta name="x5-orientation" content="portrait">
     <title>Less</title>
     <link rel="stylesheet" href="../common/css/bootstrap.css">
     <link rel="stylesheet" href="../common/css/font-awesome.css">
@@ -169,7 +185,7 @@
     https://www.cnblogs.com/landeanfen/p/6047031.html<br/>
     https://www.w3cschool.cn/less/scope.html<br/>
     http://www.bootcss.com/p/lesscss/#-variables<br/>
-    本文访问地址：https://chentong106140.github.io/ES6/flex%E5%B8%83%E5%B1%80/flex%E8%AF%AD%E6%B3%95%E6%A6%82%E5%BF%B5.html
+    本文访问地址：https://chentong106140.github.io/ES6/less/less%E6%95%99%E7%A8%8B.html
 </p>
 <h2><a href="#变量计算" name="变量计算" >变量计算</a></h2>
 <pre>
