--- a/less/less教程.html
+++ b/less/less教程.html
@@ -81,7 +81,7 @@
             font-weight: 600;
         }
 
-        nav.navbar.bootsnav ul.nav > li.dropdown > a.dropdown-toggle:after{
+        /*nav.navbar.bootsnav ul.nav > li.dropdown > a.dropdown-toggle:after{
             content: "+";
             font-family: 'FontAwesome';
             font-size: 16px;
@@ -94,7 +94,7 @@
         nav.navbar.bootsnav ul.nav > li.dropdown.on > a.dropdown-toggle:after{
             content: "\f105";
             transform: rotate(90deg);
-        }
+        }*/
         .dropdown-menu.multi-dropdown{
             position: absolute;
             left: -100% !important;
@@ -109,6 +109,15 @@
             .dropdown-menu.multi-dropdown{ left: 0 !important; }
             nav.navbar.bootsnav ul.nav > li:hover{ background: transparent; }
             nav.navbar.bootsnav ul.nav > li > a{ margin: 0; }
+        }
+        @media (max-width: 992px) {
+            nav.navbar.bootsnav {
+                width: 50px;
+                height: 50px;
+                margin-right: 20px;
+                float: right;
+                margin-top: 10px;
+            }
         }
     </style>
     <script type="text/javascript">
